# Apple-2025-autumn-Python

./: 2025-10October-28.html  2025-10October-28.ipynb  2025-11November-04.html  2025-11November-04.ipynb  2025-11November-11.html  2025-11November-11.ipynb  2025-11November-18.html  2025-11November-18.ipynb  2025-12December-04.ipynb  main.py  mydata.csv  pyproject.toml
